# mdm4-splicing

./: .gitignore  README.md  data_schema.txt  env.yml  pyproject.toml
assays/: GelB_Restain_MDM4_Bethyl_gray.tif  MDM4_RPL22_BlotB_gray.tif
data/: .gitignore
docs/: notes.md  workflow.md
figures/: AI_Image.psd  pdf-to-png.sh
notebooks/: .Rhistory  1_kallisto_sleuth.ipynb  1_sleuth.R  2_fgsea.R  2_rmats.ipynb  3_ccle_prior.ipynb  4_gsea.ipynb  a10_peak-intersections.ipynb  a10_peak-intersections.md  a10_splicing-ebsea.ipynb  a10_splicing-ebsea.md  a11_mutual-exclusive.ipynb  a1_gtex.ipynb  a1_gtex.md  a1_kallisto_sleuth.ipynb  a2_ccle-msi.ipynb  a2_ccle-msi.md  a2_suppa2.ipynb  a3_expression-splicing-overlap.ipynb  a3_expression-splicing-overlap.md  a4_tp53-wildtypes.ipynb  a4_tp53-wildtypes.md  a5_splicing-enrichment.ipynb  a5_splicing-enrichment.md  a6_ubap2l.ipynb  a6_ubap2l.md  a7_tp53-rpl22.ipynb  a7_tp53-rpl22.md  a8_stem-loops.ipynb  a8_stem-loops.md  a9_paralog-correlations.ipynb  a9_paralog-correlations.md  chip.Rmd  chip.nb.html  config.py  experiments.json  fgsea.R  fig1_CCLE-TCGA-correlates.ipynb  fig1_ccle-tcga-correlates.md  fig1_correlates.ipynb  (+53 more)
scripts/: 0_rename.sh  2_kallisto_quant.sh  3_STAR_index.sh  3_STAR_pass1.sh  4_STAR_2pass.sh  4_bam_to_junc.sh  5_intron_cluster.sh  5_run_rmats.sh  6_sashimi-plots.sh  6_splice_diffs.sh  7_fetch-msi-slices.sh  7_run_rmats.sh  8_call-indels.sh  9_eclip-align.sh  MSI_exon_bounds.bed  RPL22_oe_cluster_significance.txt  fastq_samples.txt  kallisto_index.sh  kallisto_quant.sh  md5_sums.txt  suppa_diff.sh  suppa_index.sh  suppa_psi.sh  wgs_bams_1.txt  wgs_bams_2.txt  wgs_ids.txt  wgs_ids_samples.txt  wgs_paths.txt
(+182 files in other folders)
