[tool.poetry]
name = "mdm4-splicing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
tqdm = "^4.64.0"
pandas = "^1.4.2"
seaborn = "^0.11.2"
scipy = "^1.8.0"
statsmodels = "^0.13.2"
jupyter_nbextensions_configurator = "^0.4.1"
h5py = "^3.6.0"
tables = "^3.7.0"
many = "^0.6.9"
cancer-data = "^0.3.5"
data-science-types = "^0.2.23"
jupyterlab = "^3.3.4"
notebook = "^6.4.11"
jupyter-black = "^0.3.1"
adjustText = "^0.7.3"
UpSetPlot = "^0.6.0"
pyarrow = "^7.0.0"
stackprinter = "^0.2.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
