[tool.poetry]
name = "mdm4-splicing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.8.4"
tqdm = "^4.66.2"
seaborn = "^0.11.2"
scipy = "^1.13.0"
jupyter_nbextensions_configurator = "^0.4.1"
h5py = "^3.10.0"
cancer-data = "0.3.6"
data-science-types = "^0.2.23"
jupyterlab = "^4.1.5"
notebook = "^7.1.2"
jupyter-black = "^0.3.1"
UpSetPlot = "^0.6.0"
stackprinter = "^0.2.6"
matplotlib-venn = "^0.11.7"
statsmodels = "^0.14.1"
numpy = "^1.26.4"
adjusttext = "^1.1.1"
pandas = "^2.2.1"
gtfparse = "^2.5.0"
polars = "^0.20.18"
many = "0.7.2"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
